--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.13.1",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
