--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,3 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["./src/components/*"],
-      "@/utils/*": ["./src/utils/*"],
-      "@/imgs/*": ["./src/imgs/*"],
-      "@/svgs/*": ["./src/svgs/*"]
-    }
-  }
+  "extends": "astro/tsconfigs/strict"
 }
